CREATE TYPE answer_choices AS ENUM ('a1', 'a2', 'a3', 'a4');

CREATE TABLE
    answers (
        id bigint NOT NULL,
        created_at timestamp
        with
            time zone DEFAULT now() NOT NULL,
            correct_answer_choice answer_choices NOT NULL,
            question_id bigint NOT NULL
    );

ALTER TABLE public.answers
ALTER COLUMN id
ADD
    GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.answers_id_seq START
        WITH
            1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
    );

CREATE TABLE
    public.participants (
        id bigint NOT NULL,
        created_at timestamp
        with
            time zone DEFAULT now() NOT NULL,
            "user" uuid NOT NULL,
            update_at timestamp
        with time zone NOT NULL
    );

ALTER TABLE
    public.participants
ALTER COLUMN id
ADD
    GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.participants_id_seq START
        WITH
            1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
    );

CREATE TABLE
    public.question_sets (
        id bigint NOT NULL,
        created_at timestamp
        with
            time zone DEFAULT now(),
            updated_at timestamp
        with
            time zone DEFAULT now(),
            name text NOT NULL
    );

ALTER TABLE
    public.question_sets
ALTER COLUMN id
ADD
    GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.question_sets_id_seq START
        WITH
            1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
    );

CREATE TABLE
    public.questions (
        id bigint NOT NULL,
        title text NOT NULL,
        body text NOT NULL,
        a1 text NOT NULL,
        a2 text NOT NULL,
        created_at timestamp
        with
            time zone DEFAULT now() NOT NULL,
            updated_at timestamp
        with
            time zone DEFAULT now() NOT NULL,
            a3 text NOT NULL,
            a4 text NOT NULL,
            question_set bigint
    );

ALTER TABLE public.questions
ALTER COLUMN id
ADD
    GENERATED BY DEFAULT AS IDENTITY (
        SEQUENCE NAME public.questions_id_seq START
        WITH
            1 INCREMENT BY 1 NO MINVALUE NO MAXVALUE CACHE 1
    );

ALTER TABLE ONLY public.answers
ADD
    CONSTRAINT answers_pkey PRIMARY KEY (id);

ALTER TABLE
    ONLY public.participants
ADD
    CONSTRAINT participants_pkey PRIMARY KEY (id);

ALTER TABLE
    ONLY public.question_sets
ADD
    CONSTRAINT question_sets_name_key UNIQUE (name);

ALTER TABLE
    ONLY public.question_sets
ADD
    CONSTRAINT question_sets_pkey PRIMARY KEY (id);

ALTER TABLE
    ONLY public.questions
ADD
    CONSTRAINT questions_pkey PRIMARY KEY (id);

ALTER TABLE ONLY public.answers
ADD
    CONSTRAINT answers_question_id_fkey FOREIGN KEY (question_id) REFERENCES public.questions(id);

ALTER TABLE
    ONLY public.questions
ADD
    CONSTRAINT questions_question_set_fkey FOREIGN KEY (question_set) REFERENCES public.question_sets(id);