Table "answers" {
  "id" bigint [not null]
  "created_at" timestamp [not null, default: `now()`]
  "correct_answer_choice" answer_choices [not null]
  "question_id" bigint [not null]
}

Table "customers" {
  "id" bigint [not null]
  "created_at" timestamp [default: `now()`]
  "stripe_customer_id" text
  "user_uuid" uuid
  "admin_role" boolean [not null, default: false, note: 'true if admin else false']
  "is_subscribed" boolean [not null, default: false, note: 'Has this user paid for premium?']
}

Table "question_sets" {
  "id" bigint [not null]
  "created_at" timestamp [default: `now()`]
  "updated_at" timestamp [default: `now()`]
  "name" text [not null]
  "subscribed_to_by" text
}

Table "questions" {
  "id" bigint [not null]
  "title" text [not null]
  "body" text [not null]
  "a1" text [not null]
  "a2" text [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "a3" text [not null]
  "a4" text [not null]
  "question_set" bigint
  Note: 'The main questions content'
}

Table "submission" {
  "id" bigint [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "question_id" bigint
  "a1_count" bigint [not null]
  "a2_count" bigint [not null]
  "a3_count" bigint [not null]
  "a4_count" bigint [not null]
  Note: 'Table to record user answer submissions for questions'
}

Ref "answers_question_id_fkey":"questions"."id" < "answers"."question_id"

Ref "questions_question_set_fkey":"question_sets"."id" < "questions"."question_set"

Ref "submission_question_id_fkey":"questions"."id" < "submission"."question_id"
